# TeamOfTen

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TOT-specs.md  mcp-servers.example.json  pyproject.toml  zbpack.json
.github/workflows/: tests.yml
Docs/: CODEX_AUDIT.md  CODEX_PROBE_OUTPUT.md  CODEX_RUNTIME_SPEC.md  HARNESS_SPEC.md  PROJECTS_SPEC.md  TOT-specs.md  claudeCLI-specs.md  compass-specs.md  kanban-followup-proposals.md  kanban-messaging-inventory.md  kanban-specs-v1-archived.md  kanban-specs-v2.md  kanban-specs.md  playbook-specs.md  recurrence-specs.md  reply-affordance.md  tot-specs-01-product-vision.md  tot-specs-02-repository-shape.md  tot-specs-03-tech-stack.md  tot-specs-04-project-model.md  tot-specs-05-agent-roster-and-governance.md  tot-specs-06-sqlite-data-model.md  tot-specs-07-schema-bootstrap.md  tot-specs-08-filesystem-layout.md  tot-specs-09-webdav-mirror-and-sync.md  tot-specs-10-claude-context-and-prompt-assembly.md  tot-specs-11-agent-runtime.md  tot-specs-12-coordination-tools.md  tot-specs-13-standard-and-external-tools.md  tot-specs-14-human-rest-api.md  tot-specs-15-websocket-and-events.md  tot-specs-16-frontend-specification.md  tot-specs-17-git-workspaces.md  tot-specs-18-integrations.md  tot-specs-19-security-and-auth.md  tot-specs-20-environment-variables.md  tot-specs-21-retention-and-cleanup.md  tot-specs-22-tests.md  tot-specs-23-current-implementation-gaps-and-watch-items.md  tot-specs-24-hard-invariants.md  (+8 more)
Docs/Deprecated/: HARNESS_SPEC.md  PROJECTS_SPEC.md
brand/: README.md  index-head-snippet.html
scripts/: analyze_playbook.py  analyze_prompt_log.py  bootstrap_worktree.sh  codex_probe.py  codex_probe_tools.py  codex_validate_concurrency.py  codex_validate_coord_e2e.py  diag_sdk.py  vendor_deps.py
server/: agent_env.py  agents.py  attachments_signing.py  claude_login.py  coach_objectives.py  coach_todos.py  codex_login.py  context.py  coord_mcp.py  db.py  events.py  files.py  idle_poller.py  index.html  interactions.py  kanban.py  kanban_watchdog.py  kdrive.py  knowledge.py  main.py  mcp_config.py  models_catalog.py  outputs.py  paths.py  pricing.py  project_claude_md.py  project_events.py  project_sync.py  projects_api.py  prompt_log.py  protected_file_limits.py  questions.py  recurrences.py  role_tool_allowlists.py  secrets.py  spawn_tokens.py  sync.py  tasks.py  tasks_claude_md.py  telegram.py  (+8 more)
server/compass/: __init__.py  api.py  audit.py  audit_watcher.py  codex_llm.py  config.py  llm.py  mutate.py  output_extractor.py  paths.py  presence.py  prompts.py  runner.py  scheduler.py  store.py  truth.py
server/migrations/: projects_v1.py  projects_v2.py
server/playbook/: __init__.py  api.py  bootstrap.py  config.py  llm.py  mutate.py  paths.py  prompts.py  render.py  runner.py  scheduler.py  store.py
server/runtimes/: __init__.py  base.py  claude.py  codex.py
server/shared/: __init__.py  codex_llm.py  llm_types.py
server/static/: app.js  compass.css  compass.js  index.html  kanban.js  markdown.js  playbook.css  playbook.js  style.css  tools.js
server/templates/: app_dev_claude_md.md  app_dev_playbook.md  global_claude_md.md  llm_wiki_properties.md  llm_wiki_skill.md  truth_index.md
server/tests/: conftest.py  test_agent_env.py  test_agents_helpers.py  test_attachments_signing.py  test_audit_focus.py  test_audit_self_review_warning.py  test_autoname.py  test_backlog.py  test_board_safety_ring.py  test_bootstrap.py  test_cancel_interaction.py  test_chat_reply.py  test_claude_login.py  test_claude_runtime_prompt_file.py  test_coach_backlog_first.py  test_coach_objectives.py  test_coach_prompt_v2_blocks.py  test_coach_todos.py  test_codex_auth_failure_short_circuit.py  test_codex_login.py  test_codex_memory_salvage.py  test_codex_pricing.py  test_codex_runtime_gate.py  test_compass_api.py  (+119 more)
teamoften_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+26 files in other folders)
