[project]
name = "teamoften-harness"
version = "0.3.0"
description = "Personal orchestration harness — Coach + 10 Players, Claude Code agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "claude-agent-sdk>=0.1.60",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "webdav4>=0.9",
    "cryptography>=42",
    "httpx>=0.27",
    "codex-app-server-sdk @ git+https://github.com/openai/codex@3afb185a4f02dab00927ad597996f3e5528cea45#subdirectory=sdk/python",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["server.tests*"]

[tool.setuptools.package-data]
server = ["*.html", "static/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
# Enable asyncio test mode by default so tests can `async def` without
# each file declaring @pytest.mark.asyncio themselves.
asyncio_mode = "auto"
testpaths = ["server/tests"]
# Harness tests may spin up a full app; keep output readable.
addopts = "-ra --strict-markers"
