[project]
name = "teamoften-harness"
version = "0.3.0"
description = "Personal orchestration harness — Coach + 10 Players, Claude Code agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "claude-agent-sdk>=0.1.60",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "webdav4>=0.9",
    "cryptography>=42",
    "httpx>=0.27",
    "mcp>=1.0",
    "codex-app-server-sdk>=0.3.2",
    "websockets>=16.0",
    "tzdata; sys_platform == 'win32'",
    # Office-format extractors used by the Compass auto-audit watcher
    # (compass-specs §5.5 Tier B). Each is loaded lazily inside
    # `server/compass/output_extractor.py`; if a parser is missing,
    # the audit degrades to path-only for that format rather than
    # crashing. Pure-Python wheels, no compile.
    "pypdf>=5.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["server.tests*"]

[tool.setuptools.package-data]
server = ["*.html", "static/*.html", "static/*.js", "static/*.css"]

[tool.pytest.ini_options]
# Enable asyncio test mode by default so tests can `async def` without
# each file declaring @pytest.mark.asyncio themselves.
asyncio_mode = "auto"
testpaths = ["server/tests"]
# Harness tests may spin up a full app; keep output readable.
addopts = "-ra --strict-markers"
